--- a/style.css
+++ b/style.css
@@ -36,8 +36,22 @@ body {
 
 #trexidle {
     position: relative;
-    top: 150px;
     width: 150px;
+    top: 150px;
+    animation-name: trex;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ;
+}
+
+@keyframes trex {
+    0% { transform: translate(0px, 0px); }
+    15% { transform: translate(0px, 70px); }
+    30% { transform: translate(0px, 70px) rotate(20deg); }
+    45% { transform: translate(0px, 70px) rotate(0deg); }
+    65% { transform: translate(170px, 80px); }
+    80% {}
+    100% {}
 }
 
 #car1 {
