--- a/style.css
+++ b/style.css
@@ -62,11 +62,15 @@ body {
     15% { transform: translate(0px, 70px); opacity: 1; }
     20% { transform: translate(0px, 70px); opacity: 1; }
     30% { transform: translate(0px, 70px) rotate(30deg); opacity: 1; }
+    35% { transform: translate(0px, 70px) rotate(-15deg); opacity: 1; }
     40% { transform: translate(0px, 70px) rotate(0deg); opacity: 1; }
-    59% { transform: translate(170px, 80px); opacity: 1; }
-    60% { transform: translate(170px, 80px); opacity: 0; }
-    75% { transform: translate(170px, 80px); opacity: 0; }
-    85% { transform: translate(430px, 75px); opacity: 0; }
+    41% { transform: translate(0px, 70px); opacity: 0; }
+    59% { transform: translate(170px, 80px); opacity: 0; }
+    60% { transform: translate(170px, 80px); opacity: 1; }
+    75% { transform: translate(170px, 80px); opacity: 1; }
+    76% { transform: translate(170px, 80px); opacity: 0; }
+    84% { transform: translate(430px, 75px); opacity: 0; }
+    85% { transform: translate(430px, 75px); opacity: 1; }
     90% { transform: translate(430px, 75px) rotate(45deg); opacity: 1; }
     95% { transform: translate(430px, 75px) rotate(0deg); opacity: 1; }
     100% { transform: translate(430px, 75px); opacity: 1; }
@@ -77,10 +81,15 @@ body {
     15% { transform: translate(0px, 70px); opacity: 0; }
     20% { transform: translate(0px, 70px); opacity: 0; }
     30% { transform: translate(0px, 70px) rotate(30deg); opacity: 0; }
+    35% { transform: translate(0px, 70px) rotate(-15deg); opacity: 0; }
     40% { transform: translate(0px, 70px) rotate(0deg); opacity: 0; }
-    60% { transform: translate(170px, 80px); opacity: 1; }
-    75% { transform: translate(170px, 80px); opacity: 1; }
-    85% { transform: translate(430px, 75px); opacity: 1; }
+    41% { transform: translate(0px, 70x); opacity: 1; }
+    59% { transform: translate(170px, 80px); opacity: 1; }
+    60% { transform: translate(170px, 80px); opacity: 0; }
+    75% { transform: translate(170px, 80px); opacity: 0; }
+    76% { transform: translate(170px, 80px); opacity: 1; }
+    84% { transform: translate(430px, 75px); opacity: 1; }
+    85% { transform: translate(430px, 75px); opacity: 0; }
     90% { transform: translate(430px, 75px) rotate(45deg); opacity: 0; }
     95% { transform: translate(430px, 75px) rotate(0deg); opacity: 0; }
     100% { transform: translate(430px, 75px); opacity: 0; }
@@ -91,6 +100,16 @@ body {
     width: 200px;
     top: 110px;
     left: 70px;
+    animation: carflip 8s infinite linear;
+}
+
+@keyframes carflip {
+    0% { transform: rotate(0deg); }
+    35% { transform: rotate(0deg); }
+    36% { transform: rotate(0deg) translateY(-40px); }
+    44% { transform: rotate(180deg) translateY(40px); }
+    45% { transform: rotate(180deg) translateY(0px); }
+    100% { transform: rotate(180deg); }
 }
 
 #car2 {
@@ -110,8 +129,16 @@ body {
 #alan {
     position: relative;
     width: 80px;
-    top: 110px;
-    left: -20px;
+    top: 95px;
+    left: -70px;
+    opacity: 0.5;
+    animation: alan 8s infinite linear; 
+}
+
+@keyframes alan {
+    0% { transform: translate(0px,0px); }
+    10% { transform: translate(0px,20px); opacity: 1; }
+    100% {}
 }
 
 #ian {
