--- a/style.css
+++ b/style.css
@@ -136,13 +136,43 @@ body {
 }
 
 @keyframes alan {
-    0% { transform: translate(0px,0px); }
-    10% { transform: translate(0px,20px); opacity: 1; }
-    100% {}
-}
+    0% { transform: translate(0px, 0px); }
+    10% { transform: translate(0px, 20px); opacity: 1; }
+    15% { transform: translate(0px, 20px); opacity: 1; }
+    20% { transform: translate(0px, 25px); opacity: 1; }
+    25% { transform: translate(0px, 20px); opacity: 1; }
+    30% { transform: translate(0px, 20px); opacity: 1; }
+    40% { transform: translate(0px, 0px); opacity: 0.5; }
+    100% { transform: translate(0px, 0px); }}
 
 #ian {
     position: relative;
-    width: 35px;
-    top: 100px
+    width: 30px;
+    top: 95px;
+    left: -100px;
+    opacity: 0.5;
+    animation: ian 8s infinite linear;
+}
+
+@keyframes ian {
+    0% { transform: translate(0px, 0px); }
+    30% { transform: translate(0px, 0px); }
+    40% { transform: translate(0px, 35px); opacity: 1; }
+    60% { transform: translate(0px, 35px); opacity: 1; }
+    80% { transform: translate(205px, 35px); opacity: 1; }
+    100% { transform: translate(205px, 35px); opacity: 1; }
+}
+
+#flare1 {
+    position: relative;
+    width: 30px;
+    top: 100px;
+    left: -170px;
+    opacity: 0.5;
+}
+
+@keyframes {
+    0% {
+        
+    }
 }
