--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
  margin: auto;
  border: 5px solid black;
  background-color: white;
+ background-image: url(https://i.pinimg.com/736x/3d/84/21/3d842159ad286b8be5f2615fadad8ac3.jpg);
  overflow: hidden; /* contain objects "on-screen" */
 }
 
@@ -143,7 +144,8 @@ body {
     25% { transform: translate(0px, 20px); opacity: 1; }
     30% { transform: translate(0px, 20px); opacity: 1; }
     40% { transform: translate(0px, 0px); opacity: 0.5; }
-    100% { transform: translate(0px, 0px); }}
+    100% { transform: translate(0px, 0px); }
+}
 
 #ian {
     position: relative;
@@ -156,11 +158,11 @@ body {
 
 @keyframes ian {
     0% { transform: translate(0px, 0px); }
-    30% { transform: translate(0px, 0px); }
+    30% { transform: translate(0px, 0px); opacity: 0.5; }
     40% { transform: translate(0px, 35px); opacity: 1; }
     60% { transform: translate(0px, 35px); opacity: 1; }
-    80% { transform: translate(205px, 35px); opacity: 1; }
-    100% { transform: translate(205px, 35px); opacity: 1; }
+    80% { transform: translate(215px, 35px); opacity: 1; }
+    100% { transform: translate(215px, 35px); opacity: 1; }
 }
 
 #flare1 {
@@ -169,10 +171,41 @@ body {
     top: 100px;
     left: -170px;
     opacity: 0.5;
+    animation: flare1 8s infinite linear;
 }
 
-@keyframes {
-    0% {
-        
-    }
+@keyframes flare1 {
+    0% { transform: translate(0px, 0px); }
+    10% { transform: translate(0px, 20px); opacity: 1; }
+    15% { transform: translate(0px, 20px); opacity: 1; }
+    20% { transform: translate(0px, 25px); opacity: 1; }
+    25% { transform: translate(-70px, 45px); opacity: 1; }
+    30% { transform: translate(-70px, 45px); opacity: 1; }
+    40% { transform: translate(-70px, 45px); opacity: 1; }
+    100% { transform: translate(-70px, 45px); opacity: 1; }
+}
+
+#flare2 {
+    position: relative;
+    width: 30px;
+    top: 80px;
+    left: -175px;
+    opacity: 0.5;
+    animation: flare2 8s infinite linear;
+}
+
+@keyframes flare2 {
+    0% { transform: translate(0px, 0px); }
+    30% { transform: translate(0px, 0px); opacity: 0.5; }
+    40% { transform: translate(0px, 35px); opacity: 1; }
+    60% { transform: translate(0px, 35px); opacity: 1; }
+    80% { transform: translate(215px, 35px); opacity: 1; }
+    100% { transform: translate(215px, 35px); opacity: 1; }
+}
+
+#lawyer {
+    position: relative;
+    width: 40px;
+    top: 10px;
+    left: 530px;
 }
